# LLM-DRIVEN

./: .gitignore  poster.tex  最终报告_2021080070韩佑硕.md  중문_사업계획서.md
codes/GraphNode_AI/: .env.example  .gitignore  README.md  requirements.txt
codes/GraphNode_AI/add_node/: __init__.py  call.py  readme.md
codes/GraphNode_AI/dto/: microscope_dto.py  server_dto.py
codes/GraphNode_AI/infra/: README.md
codes/GraphNode_AI/microscope/: README.md  SERVICE_OVERVIEW.md  __init__.py  call.py  pyproject.toml
codes/GraphNode_AI/microscope/block/: __init__.py  assembler.py  models.py  orderer.py  segmenter.py
codes/GraphNode_AI/microscope/block/prompts/: ordering.py  segmentation.py
codes/GraphNode_AI/microscope/graph_generation/: __init__.py  generator.py
codes/GraphNode_AI/microscope/prompts/: __init__.py  entity_relation_prompt.py  modifiers.py  prompt_factory.py  standardization_prompt.py
codes/GraphNode_AI/microscope/rag/: __init__.py  answer_gen.py  context_builder.py  macro_context.py  prompt_builder.py  retrieval_strategies.py
codes/GraphNode_AI/microscope/schema/: ontology_schema_general.json  type_mapping.json
codes/GraphNode_AI/microscope/services/: rag_service.py
codes/GraphNode_AI/microscope/tools/: render_nested_block_graph_html.py  visualize_block_graph.py  visualize_graph.py
codes/GraphNode_AI/microscope/utils/: __init__.py  document_utils.py  io_utils.py  llm_utils.py
fig4poster/note_editor/: README.md
fig4poster/onboarding/: README.md
raw_files/: block_graph.json  block_graph_viz.html  poster-llm-driven.pptx
(+95 files in other folders)
